Fortran/IBM/execute/F2008/intrinsics/error/unit_tests/erfc_scaled07.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erfc_scaled07.scenario
#FEATURE = F2008 ERFC_SCALED intrinsic
#DATE    = 20111114
#TEST_TYPE=unit
#ENDDOC

#BEGINCONTROL

#CMD       = F_COMPILE
#INPUT     = $(tcasedir)erfc_scaled07.f
#OPTS      = $(OPT_SET_STRICT_OPTIMIZATION)
#OUTPUT    = erfc_scaled07$(OBJ)
#ENDCMD

#CMD       = F_LINK
#INPUT     = erfc_scaled07$(OBJ)
#OPTS      = $(OPT_SET_STRICT_OPTIMIZATION)
#OUTPUT    = erfc_scaled07$(EXE)
#ENDCMD

#CMD       = COPY
#INPUT     = $(tcasedir)erfc_scaled07.dat
#OUTPUT    = erfc_scaled07.dat
#ENDCMD

#CMD       = RUN
#INPUT     = erfc_scaled07$(EXE)
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
